# LLVMPascalCompiler

./: .gitignore  README.md
LLVMPascal/: LLVMPascal.sln
LLVMPascal/LLVMPascal/: CMakeLists.txt  LLVMPascal.vcxproj  LLVMPascal.vcxproj.filters  ast.cpp  ast.h  constant.cpp  constant.h  dictionary.cpp  dictionary.h  error.cpp  error.h  main.cpp  parser.cpp  parser.h  program_test.pas  scanner.cpp  scanner.h  scanner_test.pas  token.cpp  token.h
